modules/gdscript/tests/scripts/analyzer/errors/vararg_inherit_with_lesser_max_argc.gd
class A:
	func f(x: int, ...args: Array) -> void:
		prints(x, args)

class B extends A:
	func f(x: int) -> void:
		print(x)

func test():
	pass
